# Armadillo_tests

./: CMakeLists.txt  README.md
lib/openblas/lib/cmake/openblas/: OpenBLASConfig.cmake
lib/openblas/lib/pkgconfig/: openblas.pc
src/: main.cpp  sparse_math.h
